<resources>
    <string name="app_name">My First Application</string>
    <string name="first_edit_text">Enter first name</string>
    <string name="last_edit_text">Enter last name</string>
    <string name="add_button">Add</string>
    <string name="instructions_tv">Please enter your details:</string>
    <string name="output_tv">Output:</string>
    <string name="random_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="youtube_channel_name">Super Bayani</string>
    <string name="youtube_subscriber">187 subscribers</string>
    <string name="youtube_url">https://www.youtube.com/channel/UCGn0ep0f0tjnegstKIlVgqg</string>
</resources>