<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="16sp"
    android:paddingTop="32sp"
    android:paddingRight="16sp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/instructions_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instructions_tv"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/firstname_etv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_edit_text"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/lastname_etv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_edit_text"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_button" />

    <TextView
        android:id="@+id/label_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:text="@string/output_tv"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/namelist_vll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16sp"
        android:orientation="vertical"/>

</LinearLayout>