<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/card_hll"
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:layout_margin="16sp"
        android:background="#F44336"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:srcCompat="@drawable/super_bayani_icon" />

        <LinearLayout
            android:id="@+id/channel_info_vll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/channel_name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/youtube_channel_name"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/subscribers_count_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/youtube_subscriber"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/url_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/youtube_url" />

</LinearLayout>